RESOLVED FIXED191795
ProcessSwap.NavigationWithLockedHistoryWithoutPSON API test is a flaky crash in debug
https://bugs.webkit.org/show_bug.cgi?id=191795
Summary ProcessSwap.NavigationWithLockedHistoryWithoutPSON API test is a flaky crash ...
Chris Dumez
Reported 2018-11-16 16:57:02 PST
ProcessSwap.NavigationWithLockedHistoryWithoutPSON API test is a flaky crash in debug: TestWebKitAPI.ProcessSwap.NavigationWithLockedHistoryWithoutPSON _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. Received data during response processing, queuing it. Received data during response processing, queuing it. _RegisterApplication(), FAILED TO establish the default connection to the WindowServer, _CGSDefaultConnection() is NULL. ASSERTION FAILED: process->hasOneRef() /Volumes/Data/slave/mojave-debug/build/Source/WebKit/UIProcess/WebProcessPool.cpp(344) : virtual WebKit::WebProcessPool::~WebProcessPool() 1 0x10cff1b59 WTFCrash 2 0x11305395b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1139b0441 WebKit::WebProcessPool::~WebProcessPool() 4 0x1139b1d35 WebKit::WebProcessPool::~WebProcessPool() 5 0x113647b8e -[WKProcessPool dealloc] 6 0x113686cc6 WTF::RetainPtr<WKProcessPool>::~RetainPtr() 7 0x113686c55 WTF::RetainPtr<WKProcessPool>::~RetainPtr() 8 0x113686c39 LazyInitialized<WTF::RetainPtr<WKProcessPool> >::~LazyInitialized() 9 0x11367bfd5 LazyInitialized<WTF::RetainPtr<WKProcessPool> >::~LazyInitialized() 10 0x11367bebf -[WKWebViewConfiguration .cxx_destruct] 11 0x7fff5e4d51f5 object_cxxDestructFromClass(objc_object*, objc_class*) 12 0x7fff5e4cd9f0 objc_destructInstance 13 0x7fff5e4cd992 object_dispose 14 0x1136933f6 WTF::RetainPtr<WKWebViewConfiguration>::~RetainPtr() 15 0x11366fdb5 WTF::RetainPtr<WKWebViewConfiguration>::~RetainPtr() 16 0x11366fd48 -[WKWebView .cxx_destruct] 17 0x7fff5e4d51f5 object_cxxDestructFromClass(objc_object*, objc_class*) 18 0x7fff5e4cd9f0 objc_destructInstance 19 0x7fff5e4cd992 object_dispose 20 0x7fff2f970849 -[NSResponder dealloc] 21 0x7fff2f96ebb4 -[NSView dealloc] 22 0x113663e6e -[WKWebView dealloc] 23 0x7fff5e4ce7c2 (anonymous namespace)::AutoreleasePoolPage::pop(void*) 24 0x7fff322f8d42 _CFAutoreleasePoolPop 25 0x7fff346c396e -[NSAutoreleasePool drain] 26 0x10c34b297 main 27 0x7fff5f5a108d start 28 0x2
Attachments
Patch (4.99 KB, patch)
2018-11-16 17:03 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-11-16 17:03:07 PST
Ryosuke Niwa
Comment 2 2018-11-16 17:05:19 PST
Comment on attachment 355164 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=355164&action=review > Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:212 > + else > + reply.second({ }); Why do we need to do this?
Chris Dumez
Comment 3 2018-11-16 17:06:04 PST
(In reply to Ryosuke Niwa from comment #2) > Comment on attachment 355164 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=355164&action=review > > > Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:212 > > + else > > + reply.second({ }); > > Why do we need to do this? It is a CompletionHandler, it needs to be called or it will ASSERT in its destructor.
WebKit Commit Bot
Comment 4 2018-11-16 18:26:14 PST
Comment on attachment 355164 [details] Patch Clearing flags on attachment: 355164 Committed r238335: <https://trac.webkit.org/changeset/238335>
WebKit Commit Bot
Comment 5 2018-11-16 18:26:16 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-11-16 18:27:34 PST
Note You need to log in before you can comment on or make changes to this bug.